src/utils/snapshots/portmatching__utils__tracer__tests__tracer_zip.snap
---
source: src/utils/tracer.rs
assertion_line: 327
expression: tracer.dot_string()
---
digraph {
    0 [ label = "State(0)" ]
    1 [ label = "Terminal" ]
    2 [ label = "State(2)" ]
    4 [ label = "State(5)" ]
    5 [ label = "State(1)" ]
    6 [ label = "State(2)" ]
    7 [ label = "State(3)" ]
    0 -> 2 [ label = "ExistingEdge(())" ]
    2 -> 7 [ label = "ExistingEdge(())" ]
    2 -> 4 [ label = "ExistingEdge(())" ]
    4 -> 1 [ label = "NewEdge { to: 66, weight: () }" ]
    0 -> 5 [ label = "ExistingEdge(())" ]
    5 -> 6 [ label = "ExistingEdge(())" ]
    6 -> 7 [ label = "ExistingEdge(())" ]
    7 -> 1 [ label = "NewEdge { to: 6, weight: () }" ]
}
