src/utils/snapshots/portmatching__utils__tracer__tests__zip_parallel.snap
---
source: src/utils/tracer.rs
assertion_line: 361
expression: tracer_parallel.dot_string()
---
digraph {
    0 [ label = "State(0)" ]
    1 [ label = "Terminal" ]
    3 [ label = "State(1)" ]
    0 -> 3 [ label = "ExistingEdge(())" ]
    3 -> 1 [ label = "TerminalEdge { action: TestAddEdge(2) }" ]
    0 -> 3 [ label = "ExistingEdge(())" ]
}
